# sna-evaluation-framework

./: .env.example  .env.template  .gitignore  API_DESIGN.md  README.md  README_UC_SETUP.md  pyproject.toml
.github/: copilot-instructions.md
eval/: api.py  config.yaml  job_queue.py  models.py  tmp1_05ixe1.yaml  tmpw0mt5tyo.yaml  unity_catalog.py  worker.py
eval/datasets/: README.md  hydrate_test_data.py  in_scope_questions.yaml  in_scope_questions.yaml.backup  single_question_test.yaml  test_questions.yaml
eval/datasets_sensitive/: .gitkeep  in_scope_questions_hydrated.yaml  in_scope_questions_hydrated_json.yaml
examples/: client_example.py
pyrit_reports/: dataset_report.json  dataset_report_20251231_152343.html  dataset_report_20251231_152343.json  dataset_report_20260102_115043.html  dataset_report_20260102_115043.json
pyrit_reports/eval_20260102_120142_772b24/: dataset_report.json  dataset_report_20260102_130301.html  dataset_report_20260102_130301.json
pyrit_reports/eval_20260102_120336_1f1212/: dataset_report.json  dataset_report_20260102_130442.html  dataset_report_20260102_130442.json
pyrit_reports/eval_20260102_120610_48fd97/: dataset_report.json  dataset_report_20260102_130707.html  dataset_report_20260102_130707.json
pyrit_reports/eval_20260102_123530_2ae338/: dataset_report.json  dataset_report_20260102_133615.html  dataset_report_20260102_133615.json
pyrit_reports/eval_20260102_134418_c20495/: dataset_report.json  dataset_report_20260102_144530.html  dataset_report_20260102_144530.json
pyrit_reports/eval_20260102_134512_e2deae/: dataset_report.json  dataset_report_20260102_144617.html  dataset_report_20260102_144617.json
scripts/: run_evaluation.sh  start_api.sh
(+29 files in other folders)
